index.html fix Signed-off-by: bundstrom <selfbrastup@gmail.com>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="gensList">	
 				<a class="genLinkBlock" href="./ar_rec/index.html">
 					<div class="genMini" id="genOne genArrestRecord">
-						<img src="ar_rec-logo.jpg" width="300" height="166" alt="arrest record generator">
+						<img src="./ar_rec-logo.jpg" width="300" height="166" alt="arrest record generator">
 						<span>Arrest Records</span>
 					</div>
 				</a>
