index.html fix #2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<p>После каждого составленного отчёта рекомендуется <strong>очищать форму</strong> предназаченной для этого кнопкой.</p>
 				</div>
 				<div class="signLine">
-					<div class="leftParagraph"><img src="ads.png" class="adsd" height="125" width="125" alt="AD&SD"></div>
+					<div class="leftParagraph"><img src="./ads.png" class="adsd" height="125" width="125" alt="AD&SD"></div>
 					<div class="sign">
 					Chris Moore,<br>
 					Information Systems Manager II,<br>
@@ -54,19 +54,19 @@
 				</a>
 				<a class="genLinkBlock" onclick="preventDefault()">
 					<div class="genMini" id="genTwo">
-						<img src="soon-logo.jpg" width="300" height="166" alt="some generator">
+						<img src="./soon-logo.jpg" width="300" height="166" alt="some generator">
 						<span>Officer File — Arrest Reports (soon)</span>
 					</div>
 				</a>
 				<a class="genLinkBlock" href="" onclick="preventDefault()">
 					<div class="genMini" id="genThree">
-						<img src="soon-logo.jpg" width="300" height="166" alt="some generator">
+						<img src="./soon-logo.jpg" width="300" height="166" alt="some generator">
 						<span>Incident Reports (soon)</span>
 					</div>
 				</a>
 				<a class="genLinkBlock" onclick="preventDefault()">
 					<div class="genMini" id="genFour">
-						<img src="soon-logo.jpg" width="300" height="166" alt="some generator">
+						<img src="./soon-logo.jpg" width="300" height="166" alt="some generator">
 						<span>Officer File — Weapon Using Report (soon)</span>
 					</div>
 				</a>
