--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<p>После каждого составленного отчёта рекомендуется <strong>очищать форму</strong> предназаченной для этого кнопкой.</p>
 				</div>
 				<div class="signLine">
-					<div class="leftParagraph"><img src="./ads.png" class="adsd" height="125" width="125" alt="AD&SD"></div>
+					<div class="leftParagraph"><img src="./department.png" class="department" height="125" width="125" alt="department"></div>
 					<div class="sign">
 					Chris Moore,<br>
 					Information Systems Manager II,<br>
