--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</a>
 				<a class="genLinkBlock" onclick="./pf_arr/index.html">
 					<div class="genMini" id="genTwo">
-						<img src="./pf_arr-logo.jpg.jpg" width="300" height="166" alt="personal file arrest reports generator">
+						<img src="./pf_arr-logo.jpg" width="300" height="166" alt="personal file arrest reports generator">
 						<span>Officer File — Arrest Reports</span>
 					</div>
 				</a>
