--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<span>Arrest Records</span>
 					</div>
 				</a>
-				<a class="genLinkBlock" onclick="./pf_arr/index.html">
+				<a class="genLinkBlock" href="./pf_arr/index.html">
 					<div class="genMini" id="genTwo">
 						<img src="./pf_arr-logo.jpg" width="300" height="166" alt="personal file arrest reports generator">
 						<span>Officer File — Arrest Reports</span>
