--- a/pf_arr/index.html
+++ b/pf_arr/index.html
@@ -72,7 +72,7 @@
 					
 					<div class="inputWrap" id="officersListWrap">
 						<label class="outer">Состав патруля:</label>
-						<input required="required" type="text" name="officers" id="officer1" placeholder="Например: Police Officer II Victoria Walsh">
+						<input required="required" type="text" name="officers" id="officer1" placeholder="Например: Police Officer I Victoria Walsh">
 						<input type="text" name="officers" id="officer2" placeholder="Например: Police Officer I Jahns Schoenig">
 						<input type="text" name="officers" id="officer3" placeholder="Например: Police Officer II Jastin Long">
 						<span>Если в патруле 1 или два офицера — неиспользованные поля оставьте ПУСТЫМИ.</span>
